# opencog

opencog/atomspace/: Atom.cc  AtomSpace.h  AtomTable.h  AttentionBank.cc  AttentionBank.h  ImportanceIndex.cc  ImportanceIndex.h
opencog/dynamics/attention/: ImportanceDiffusionAgent.cc  ImportanceDiffusionAgent.h  ImportanceUpdatingAgent.cc  ImportanceUpdatingAgent.h  ImportanceUpdatingAgentCopy.cc
opencog/embodiment/: CMakeLists.txt
opencog/embodiment/AutomatedSystemTest/: CMakeLists.txt  GoldStdGen.cc  GoldStdMessage.h  GoldStdReaderAgent.cc  PBTester.cc  PBTester.h
opencog/embodiment/Control/: CMakeLists.txt
opencog/embodiment/Control/OperationalAvatarController/: BaseAgentModeHandler.cc  CMakeLists.txt  DefaultAgentModeHandler.cc  MockOpcHCTest.cc  MockOpcHCTest.h  OAC.cc  OAC.h  OACTester.cc  PVPActionPlanSender.cc  PVPActionPlanSender.h  Pet.cc  PetMessageSender.cc  PetMessageSender.h
opencog/embodiment/Control/PerceptionActionInterface/: CMakeLists.txt
opencog/embodiment/Control/Procedure/: CMakeLists.txt  ComboInterpreter.cc  ComboInterpreter.h  ComboPAIExecutable.cc  ComboProcedureRepository.cc  (+4 more)
opencog/embodiment/Learning/: CMakeLists.txt
opencog/embodiment/Learning/behavior/: BE.cc  CMakeLists.txt
opencog/embodiment/WorldWrapper/: CMakeLists.txt  PAIWorldWrapper.cc  WorldWrapperUtil.h
opencog/spatial/: CMakeLists.txt
opencog/spatial/3DSpaceMap/: Octree3DMapManager.cc
opencog/visualization/ubigraph/: UbigraphModule.cc
scripts/: ocpkg
tests/atomspace/: AtomSpaceImplUTest.cxxtest  AtomSpaceUTest.cxxtest  AttentionBankUTest.cxxtest  CMakeLists.txt
tests/dynamics/: HebbianUpdatingAgentUTest.cxxtest  ImportanceDiffusionAgentUTest.cxxtest
tests/embodiment/Control/: CMakeLists.txt
tests/embodiment/Control/MessagingSystem/: CMakeLists.txt
tests/learning/: CMakeLists.txt
tests/learning/pln/: CMakeLists.txt  PLNUTest.cxxtest  pymodule.conf
tests/python/test_pln/: pln_test_module.py
(+35 files in other folders)
